[project]
name = "autumnated"
version = "0.1.0"
description = "markov bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markovify",
    "requests",
    "spacy",
    "numpy==1.26.4",
    "en-core-web-sm",
    "pandas>=2.2.3",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
